2019-03-15
**********
Confirm-SD_AnvändareMedlemIAzureGrupp - Hämtar nu alla medlemmar i Azure-grupp
Confirm-SD_GemAzureSynkatTillExchange - Hämtar nu alla medlemmar i Azure-grupp
Edit-SD_AdminBehörigheter - Hanterar nu varningar vid borttag av behörighet
Get-SD_FunkBehörigheter - Hämtar nu alla medlemmar i Azure-grupp
Get-SD_RumBokningsbehörighet - Ändrad parameter att nu ange att synkronisering ska utföras / La till progressbar / La till hantering av borttagen adress / Tar nu fram samtliga medlemmar i Azure-grupp / Skriver nu ut antal som inte har blivit synkroniserade / Listning av icke synkade sker nu enbart om synkning inte ska utföras
Get-SD_RumExporteraFrånFleraTillExcel - Hämtar nu alla medlemmar i Azure-grupp
Sync-SD_RumAzureTillExchange - Ändrade vilka exceptions som ska hanteras / Hämtar nu alla medlemmar i Azure-grupp

2019-03-14
**********
Gått igenom de flesta skript för omdefiniering av handeringen av exceptions, för enklare kodstruktur

Add-SD_AnvändareAutosvar - Rättat text i Write-Progress
Get-SD_AnvändareOmbud - La till att kontrollera efter engelsk kalender om svensk inte fanns på kontot
Add-SD_RumBokaFleraAnvändare - Lägger nu på behörighet av de konton som inte har synkats från Azure
Confirm-SD_AnvändareKontoStatus - Korrigerat hur rapport för minuter skapas för nuvarande datum
Connect-SD_ToServices - Tar nu bort gamla, inlästa, temporära, Exchange-moduler
Get-SD_DistÄgare - La till filtrering för att enbart visa användare
Get-SD_FunkAdmins - Ändrat till att hämtning av behörigheter görs på den hittade maillådan, istället för namn angivet av användaren
Get-SD_FunkBehörigheter - Strukturerade om hämtningen av behörigheter / Kan nu ta mailadress till funktionsbrevlåda som parameter
Get-SD_RumBokningsbehörighet - Lägger nu på behörighet av de konton som inte har synkats från Azure / Inte längre output när behörighet på rums maillåda skapas
Starta Servicedesk PowerShell-Modul - Tar nu bort gamla, inlästa, temporära, Exchange-moduler